Working with virtual thread java 20+